--- a/src/Pokegame.css
+++ b/src/Pokegame.css
@@ -8,14 +8,20 @@
   border-radius: 5px;
   font-weight: 800;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.Pokegame-redo {
-  padding-left: 20px;  height: 24px;  
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+.Pokegame-play-again:active{
+  background-color: #65a728;
+  transform: translateY(6px);
+}
+
+.Pokegame-redo {
+  padding-left: 20px;  height: 24px;  
+
+}
+
 
 
