--- a/src/Pokedex.css
+++ b/src/Pokedex.css
@@ -6,6 +6,10 @@
   color: rgb(253, 125, 125);
   font-weight: 700;
 }
+.draw {
+  color: rgb(209, 206, 206);
+  font-weight: 700;
+}
 h4 {
   margin:0;
   font-weight: 600;
