--- a/src/Pokegame.css
+++ b/src/Pokegame.css
@@ -8,13 +8,13 @@
   border-radius: 5px;
   font-weight: 800;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 .Pokegame-play-again:active{
-  background-color: #65a728;
+  background-color: #70aa39;
   transform: translateY(6px);
 }
 
